--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,10 @@
 extends layouts/main
 
 block missHead
+
+  // Adsense
+  script(data-ad-client='ca-pub-7663681425693792' async='' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+
   meta(name='description' content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
   link(rel='canonical' href=HOST)
   title Science Cookies - Artículos de ciencia con chispas de chocolate 
