--- a/src/content/edit.pug
+++ b/src/content/edit.pug
@@ -160,7 +160,7 @@ block precontent
                 .form-check
                   input#cat4.form-check-input(type='checkbox' value='tecnologia')
                   label.form-check-label(for='cat4') Tecnología
-            #sendUptCont.from-row.d-none
+            #sendUptCont.form-row.d-none
               if LANG=="es"
                 .form-check
                   input#inSendUpt.form-check-input(type='checkbox')
@@ -186,6 +186,48 @@ block precontent
           else if LANG=="en"
             button#btnCnfPublish.btn.btn-scckie.btn-block(type='button') Publish
           button#btnCanPublish0.btn.btn-secondary.btn-block(type='button' data-dismiss='modal') #{Buttons[LANG]["cancel"]}
+      
+  //- Translate modal
+  #mdlTranslate.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlTranslateL' aria-hidden='true')
+    .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
+      .modal-content
+        .modal-header
+          if LANG=="es"
+            h5#mdlTranslateL.modal-title Generar traducción
+          else if LANG=="en"
+            h5#mdlTranslateL.modal-title Generate translation
+          button#btnCanTranslate1.close(type='button' data-dismiss='modal' aria-label='Close')
+            span(aria-hidden='true') ×
+        .modal-body
+          p#mdlTranslateTxt
+          form#frmTranslate
+            .form-row
+              if LANG=="es"
+                .alert.alert-dismissible.fade.show.alert-danger(role='alert')
+                  | Estás en español, ¿realmente quieres traducir desde otro idioma?
+              .alert.alert-dismissible.fade.show.alert-warning(role='alert')
+                if LANG=="es"
+                  | La traducción sobreescribe los cambios en el idioma actual
+                else if LANG=="en"
+                  | The translation overrides the changes in the current language
+            .form-row
+              .form-group
+              if LANG=="es"
+                label(for='inTransFrom') Traducir del
+                select#inTransFrom.form-control(required)
+                  option(selected value="") Elegir...
+              else if LANG=="en"
+                label(for='inTransFrom') Translate from
+                select#inTransFrom.form-control(required)
+                  option(selected value="") Choose...
+          #barTranslateCont.progress.my-2.d-none
+            #barTranslate.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
+        .modal-footer
+          if LANG=="es"
+            button#btnCnfTranslate.btn.btn-scckie.btn-block(type='button') Traducir
+          else if LANG=="en"
+            button#btnCnfTranslate.btn.btn-scckie.btn-block(type='button') Translate
+          button#btnCanTranslate0.btn.btn-secondary.btn-block(type='button' data-dismiss='modal') #{Buttons[LANG]["cancel"]}
 
   //- Side toolbar
   .tbar.tbar-right.btn-toolbar.mb-3(role='toolbar')
@@ -194,6 +236,8 @@ block precontent
         i.fas.fa-plus
       button.btn.btn-scckie(data-toggle='modal' data-target='#mdlMedMan')
         i.fas.fa-image
+      button.btn.btn-scckie(data-toggle='modal' data-target='#mdlTranslate')
+        i.fas.fa-language
       a#btnPrevCook.btn.btn-scckie(target="_blank")
         i.fas.fa-eye
       a#btnPrevMail.btn.btn-scckie(target="_blank")
@@ -248,5 +292,5 @@ block content
         textarea#inJava.form-control(rows='8' readonly='')
 
 block ownjs
-  script(src=HOST+'/js/edit.js')
+  script(src='/js/edit.js')
   script#javaIns
